Added http error message interceptor

--- a/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.html
+++ b/TaggyAppFrontend/src/app/components/dashboard/dashboard.component.html
@@ -21,5 +21,6 @@
       <div class="flex flex-column gap-4">
          <settings />
       </div>
+      <p-button class="absolute" icon="pi pi-plus" label="Add group"></p-button>
    </p-sidebar>
 </div>
