--- a/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.scss
+++ b/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.scss
@@ -1,3 +1,10 @@
-.group-user{
-    min-height: 3rem;
+.group-user {
+  min-height: 3rem;
+}
+
+:host ::ng-deep {
+  .p-scroller-content {
+    align-items: center;
+    justify-content: center;
+  }
 }
