--- a/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.html
+++ b/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.html
@@ -1,15 +1,17 @@
-<div *ngIf="groupUsers" class="flex flex-column">
+<div *ngIf="pagedGroupUsers" class="flex flex-column">
    <div class="flex align-items-center gap-1">
       <h3>Members</h3>
       <p-button icon="pi pi-plus" styleClass="p-button-rounded p-button-text" (onClick)="formVisible = true" />
    </div>
-   <div class="flex flex-column gap-2">
-      <div *ngFor="let groupUser of groupUsers" class="flex flex-column">
-         <div
-            class="group-user p-card flex flex-column sm:flex-row justify-content-between align-items-start sm:align-items-center min-h-3rem w-12 p-2">
-            <div class="flex align-items-center gap-1 pr-3 w-12 sm:w-8">
+   <div class="flex flex-column gap-2 max-h-full">
+      <div *ngFor="let groupUser of pagedGroupUsers.items" class="max-w-28rem p-1">
+         <div class="group-user p-card flex justify-content-center min-h-3rem w-12 p-2">
+            <div class="flex-1 flex align-items-center gap-1 pr-3 w-8">
                <h4 class="text-ellipsis m-0">{{groupUser.name}}</h4>
-               <p class="text-sm">{{roleToLabel(groupUser.role)}}</p>
+               <p *ngIf="!isEditing(groupUser)" class="text-sm">{{roleToLabel(groupUser.role)}}</p>
+               <p-dropdown *ngIf="isEditing(groupUser)" [options]="roleOptions" [(ngModel)]="editGroupUser!.role"
+                  styleClass="w-12" placeholder="Role">
+               </p-dropdown>
             </div>
             <div *ngIf="!isEditing(groupUser) && hasLowerRole(groupUser) && !isCurrentUser(groupUser)">
                <p-button icon="pi pi-pencil" styleClass="p-0" [text]="true" [rounded]="true"
@@ -17,17 +19,15 @@
                <p-button icon="pi pi-trash" styleClass="p-0" [text]="true" [rounded]="true"
                   (onClick)="onUserRemove($event, groupUser)" />
             </div>
-            <div *ngIf="isEditing(groupUser)" class="flex align-items-center gap-2">
+            <div *ngIf="isEditing(groupUser)" class="flex align-items-center gap-2 min-w-6rem">
                <p-button icon="pi pi-check" styleClass="p-0" [text]="true" [rounded]="true"
-                  (onClick)="onUserEditSubmit()" />
+                  (onClick)="onUserEditSubmit()" [disabled]="isSameRole(groupUser)" />
                <p-button icon="pi pi-times" styleClass="p-0" [text]="true" [rounded]="true"
                   (onClick)="onUserEditCancel()" />
             </div>
          </div>
-         <p-dropdown *ngIf="isEditing(groupUser)" [options]="roleOptions" [(ngModel)]="editGroupUser!.role"
-            [style]="{'width':'100%'}" placeholder="Role">
-         </p-dropdown>
       </div>
+      <p-button *ngIf="hasMoreData()" [text]="true" label="Show more" (onClick)="onMoreGroupUsers()"></p-button>
    </div>
 </div>
 <p-dialog header="Add New Member" [modal]="true" [(visible)]="formVisible" [style]="{ width: '25rem' }">
@@ -36,7 +36,8 @@
          <input id="userName" formControlName="userName" placeholder="Username or Email" pInputText class="w-full" />
          <div class="flex justify-content-end gap-2">
             <p-button label="Cancel" (onClick)="formVisible = false"></p-button>
-            <p-button type="submit" label="Add" (onClick)="onUserAddSubmit()" [disabled]="newGroupUserForm.invalid"></p-button>
+            <p-button type="submit" label="Add" (onClick)="onUserAddSubmit()"
+               [disabled]="newGroupUserForm.invalid"></p-button>
          </div>
       </div>
    </form>
