--- a/TaggyAppFrontend/src/app/components/common/file/file-upload/file-upload.component.html
+++ b/TaggyAppFrontend/src/app/components/common/file/file-upload/file-upload.component.html
@@ -29,9 +29,7 @@
             <div *ngFor="let file of files; let i = index"
                class="file-card card flex m-0 flex-column md:flex-row border-1 surface-border justify-content-between w-12 p-3 gap-3">
                <div class="flex-1 flex flex-column justify-content-center min-w-0 w-12 md:w-3">
-                  <p class="m-0 font-semibold text-ellipsis">{{ file.browserFile.name }}</p>
-                  <p-badge *ngIf="file.status === 'failed'" [value]="file.status" severity="danger" />
-                  <p-badge *ngIf="file.status === 'cancelled'" [value]="file.status" severity="warning" />
+                  <input pInputText [(ngModel)]="file.createFileDto.untrustedName" placeholder="Name" />
                </div>
                <div class="flex flex-row justify-content-evenly align-items-center w-12 md:w-8">
                   <div class="w-4">
@@ -66,15 +64,15 @@
          <div *ngIf="uploadedFiles.length > 0">
             <div class="flex">
                <h3>Uploaded files</h3>
-               <p-button label="Clear" class="align-content-center" [text]="true" [rounded]="true"
-                  severity="secondary" (onClick)="uploadedFiles = []" />
+               <p-button label="Clear" class="align-content-center" [text]="true" [rounded]="true" severity="secondary"
+                  (onClick)="uploadedFiles = []" />
             </div>
             <div class="flex flex-wrap justify-content-center gap-5">
                <div *ngFor="let file of uploadedFiles; let i = index"
                   class="file-card card flex flex-column sm:flex-row border-1 surface-border justify-content-between w-12 m-0 p-3 gap-3">
                   <div class="flex-1 flex flex-column w-12 sm:w-6 justify-content-center min-w-0">
                      <p class="m-0 font-semibold text-ellipsis">{{
-                        file.browserFile.name }}</p>
+                        file.createFileDto.untrustedName }}</p>
                      <p-badge *ngIf="file.status === 'failed'" [value]="file.status" severity="danger" />
                      <p-badge *ngIf="file.status === 'cancelled'" [value]="file.status" severity="warning" />
                   </div>
