--- a/TaggyAppFrontend/src/app/components/common/tag-autocomplete/tag-autocomplete.component.html
+++ b/TaggyAppFrontend/src/app/components/common/tag-autocomplete/tag-autocomplete.component.html
@@ -1,7 +1,7 @@
 <span class="p-fluid">
       <p-autoComplete [(ngModel)]="tags" [suggestions]="tagSuggestions" [multiple]="true" [dropdown]="true"
             [showEmptyMessage]="false" (completeMethod)="onTagSuggestionComplete($event)" (onSelect)="onSelect()"
-            (onUnselect)="onUnselect($event)" (onKeyUp)="onTagKeyUp($event)" [placeholder]="'Tags'"
+            (onUnselect)="onUnselect($event)" (input)="onTagInput($event)" [placeholder]="'Tags'"
             [ngClass]="{'ng-invalid': !tagsValid, 'ng-dirty': !tagsValid}" field="name">
       </p-autoComplete>
 </span>
