--- a/TaggyAppFrontend/src/app/components/common/file/file-upload/file-upload.component.html
+++ b/TaggyAppFrontend/src/app/components/common/file/file-upload/file-upload.component.html
@@ -28,6 +28,7 @@
          <div *ngIf="files.length > 0" class="flex flex-wrap justify-content-center gap-5">
             <div *ngFor="let file of files; let i = index"
                class="file-card card flex m-0 flex-column md:flex-row border-1 surface-border justify-content-between w-12 p-3 gap-3">
+               <img [src]="file.localUrl" class="w-12 md:w-3" />
                <div class="flex-1 flex flex-column justify-content-center min-w-0 w-12 md:w-3">
                   <input pInputText [(ngModel)]="file.createFileDto.untrustedName" placeholder="Name" />
                </div>
