--- a/TaggyAppFrontend/src/app/components/common/dashboard/add-group/add-group.component.html
+++ b/TaggyAppFrontend/src/app/components/common/dashboard/add-group/add-group.component.html
@@ -4,7 +4,7 @@
       <input id="description" formControlName="description" placeholder="Description" pInputText class="w-full" />
       <div class="flex justify-content-end gap-2">
          <p-button label="Cancel" (onClick)="formVisible = false"></p-button>
-         <p-button type="submit" label="Add" (onClick)="onSubmit()" [disabled]="newGroupForm.invalid"></p-button>
+         <p-button type="submit" label="Add" (onClick)="onSubmit()" [disabled]="newGroupForm.invalid" [loading]="apiLoading"></p-button>
       </div>
    </div>
 </form>
