--- a/TaggyAppFrontend/src/app/components/common/file/file-info/file-info.component.html
+++ b/TaggyAppFrontend/src/app/components/common/file/file-info/file-info.component.html
@@ -3,11 +3,12 @@
       <h2>File Info</h2>
       <div *ngIf="!editing">
          <p-button icon="pi pi-pencil" styleClass="p-0" [text]="true" [rounded]="true" (onClick)="editing = true" />
-         <p-button icon="pi pi-trash" styleClass="p-0" [text]="true" [rounded]="true" (onClick)="onDelete($event)" />
+         <p-button styleClass="p-0" [icon]="deleteLoading ? 'pi pi-spin pi-spinner' : 'pi pi-trash'" [text]="true"
+            [rounded]="true" [disabled]="deleteLoading" (onClick)="onDelete($event)" />
       </div>
       <div *ngIf="editing">
-         <p-button icon="pi pi-check" styleClass="p-0" [text]="true" [rounded]="true" [disabled]="fileEditForm.invalid"
-            (onClick)="onSubmit()" />
+         <p-button styleClass="p-0" [icon]="editLoading ? 'pi pi-spin pi-spinner' : 'pi pi-check'" [text]="true"
+            [rounded]="true" [disabled]="fileEditForm.invalid || editLoading" (onClick)="onSubmit()" />
          <p-button icon="pi pi-times" styleClass="p-0" [text]="true" [rounded]="true" (onClick)="onCancel()" />
       </div>
    </div>
