--- a/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.html
+++ b/TaggyAppFrontend/src/app/components/common/group/group-members/group-members.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="pagedGroupUsers" class="flex flex-column">
+<div class="flex flex-column">
    <div class="flex align-items-center gap-1">
       <h3>Members</h3>
       <p-button icon="pi pi-plus" styleClass="p-button-rounded p-button-text" (onClick)="formVisible = true" />
    </div>
-   <div class="flex flex-column gap-2 max-h-full">
+   <div *ngIf="pagedGroupUsers.items.length > 0" class="flex flex-column gap-2 max-h-full">
       <div *ngFor="let groupUser of pagedGroupUsers.items" class="max-w-28rem p-1">
          <div class="group-user p-card flex justify-content-center min-h-3rem w-12 p-2">
             <div class="flex-1 flex align-items-center gap-1 pr-3 w-8">
@@ -16,18 +16,27 @@
             <div *ngIf="!isEditing(groupUser) && hasLowerRole(groupUser) && !isCurrentUser(groupUser)">
                <p-button icon="pi pi-pencil" styleClass="p-0" [text]="true" [rounded]="true"
                   (onClick)="onUserEdit(groupUser)" />
-               <p-button icon="pi pi-trash" styleClass="p-0" [text]="true" [rounded]="true"
+               <p-button styleClass="p-0" [icon]="deleteLoading ? 'pi pi-spin pi-spinner' : 'pi pi-trash'"
+                  [disabled]="deleteLoading" [text]="true" [rounded]="true"
                   (onClick)="onUserRemove($event, groupUser)" />
             </div>
             <div *ngIf="isEditing(groupUser)" class="flex align-items-center gap-2 min-w-6rem">
-               <p-button icon="pi pi-check" styleClass="p-0" [text]="true" [rounded]="true"
-                  (onClick)="onUserEditSubmit()" [disabled]="isSameRole(groupUser)" />
+               <p-button styleClass="p-0" [icon]="editLoading ? 'pi pi-spin pi-spinner' : 'pi pi-check'"
+                  [disabled]="editLoading" [text]="true" [rounded]="true" (onClick)="onUserEditSubmit()"
+                  [disabled]="isSameRole(groupUser)" />
                <p-button icon="pi pi-times" styleClass="p-0" [text]="true" [rounded]="true"
                   (onClick)="onUserEditCancel()" />
             </div>
          </div>
       </div>
-      <p-button *ngIf="hasMoreData()" [text]="true" label="Show more" (onClick)="onMoreGroupUsers()"></p-button>
+      <p-button *ngIf="!usersLoading && hasMoreData()" [text]="true" label="Show more" (onClick)="onMoreGroupUsers()"></p-button>
+   </div>
+   <div *ngIf="usersLoading" class="flex flex-column gap-2 max-h-full">
+      <p-skeleton *ngFor="let skeleton of skeletonArray" class="h-3rem max-w-28rem p-1 " height="100%"
+         width="100%"></p-skeleton>
+   </div>
+   <div *ngIf="!usersLoading && pagedGroupUsers.items.length === 0">
+      <h4>No data</h4>
    </div>
 </div>
 <p-dialog header="Add New Member" [modal]="true" [(visible)]="formVisible" [style]="{ width: '25rem' }">
@@ -36,7 +45,7 @@
          <input id="userName" formControlName="userName" placeholder="Username or Email" pInputText class="w-full" />
          <div class="flex justify-content-end gap-2">
             <p-button label="Cancel" (onClick)="formVisible = false"></p-button>
-            <p-button type="submit" label="Add" (onClick)="onUserAddSubmit()"
+            <p-button type="submit" label="Add" [loading]="addLoading" (onClick)="onUserAddSubmit()"
                [disabled]="newGroupUserForm.invalid"></p-button>
          </div>
       </div>
